// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ContentPreview falls back on DefaultContentPreview if the configured widget is undefined 1`] = `
<DefaultContentPreview
  config={Object {}}
  formName="test-form"
  onBlur={[MockFunction]}
  onChange={[MockFunction]}
  onChangeSilent={[MockFunction]}
  onFocus={[MockFunction]}
  path="name"
  schema={
    Object {
      "title": "Name",
      "type": "string",
    }
  }
  value="Andrew"
  widgets={Object {}}
/>
`;

exports[`ContentPreview renders 1`] = `
<DefaultContentPreview
  config={Object {}}
  formName="test-form"
  onBlur={[MockFunction]}
  onChange={[MockFunction]}
  onChangeSilent={[MockFunction]}
  onFocus={[MockFunction]}
  path="name"
  schema={
    Object {
      "title": "Name",
      "type": "string",
    }
  }
  value="Andrew"
/>
`;

exports[`ContentPreview renders custom widget 1`] = `
<customPreview
  config={
    Object {
      "preview": "customPreview",
    }
  }
  formName="test-form"
  onBlur={[MockFunction]}
  onChange={[MockFunction]}
  onChangeSilent={[MockFunction]}
  onFocus={[MockFunction]}
  path="name"
  schema={
    Object {
      "title": "Name",
      "type": "string",
    }
  }
  value="Andrew"
  widgets={
    Object {
      "customPreview": [Function],
    }
  }
/>
`;
